--- a/extension.toml
+++ b/extension.toml
@@ -1,7 +1,7 @@
 id = "tsar"
 name = "TSAR Theme"
-version = "0.0.1"
+version = "0.0.2"
 schema_version = 1
 authors = ["x <x032205@gmail.com>"]
-description = "Minimal and modern dark theme"
+description = "Minimal and modern semi-transparent dark theme."
 repository = "https://github.com/x032205/tsar-zed-theme"
